[gd_scene load_steps=2 format=3 uid="uid://dm5n2cwj6kxqy"]

[ext_resource type="Script" path="res://scripts/ui/debug_console_ui.gd" id="1_debug"]

[node name="DebugConsole" type="PanelContainer"]
custom_minimum_size = Vector2(380, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 600.0
grow_horizontal = 0
script = ExtResource("1_debug")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üîß Debug Console"
theme_override_font_sizes/font_size = 18

[node name="CloseButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "‚úï"
flat = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="FeaturesLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "ÂäüËÉΩÂºÄÂÖ≥"
theme_override_font_sizes/font_size = 14

[node name="FeatureContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="MergeToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/FeatureContainer"]
layout_mode = 2
text = "ÂêàÊàê"
metadata/feature = 0

[node name="PoolAffixesToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/FeatureContainer"]
layout_mode = 2
text = "Â•ñÊ±†ËØçÁºÄ"
metadata/feature = 1

[node name="OrderRefreshToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/FeatureContainer"]
layout_mode = 2
text = "ËÆ¢ÂçïÂà∑Êñ∞"
metadata/feature = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemTypesLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Áâ©ÂìÅÁ±ªÂûã"
theme_override_font_sizes/font_size = 14

[node name="ItemTypeContainer" type="HFlowContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 4

[node name="FruitToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
disabled = true
button_pressed = true
text = "Ê∞¥Êûú"

[node name="MedicineToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
text = "ËçØÂìÅ"
metadata/feature = 3

[node name="StationeryToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
text = "ÊñáÂÖ∑"
metadata/feature = 4

[node name="KitchenwareToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
text = "Âé®ÂÖ∑"
metadata/feature = 5

[node name="ElectronicsToggle" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
text = "ÁîµÂô®"
metadata/feature = 6

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ValuesLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Êï∞ÂÄºÈÖçÁΩÆ"
theme_override_font_sizes/font_size = 14

[node name="MergeLimitRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MergeLimitRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÂêàÊàê‰∏äÈôê"

[node name="MergeLimitOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/MergeLimitRow"]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySizeRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/InventorySizeRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ËÉåÂåÖÂ§ßÂ∞è"

[node name="InventorySizeSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/InventorySizeRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 6.0

[node name="OrderLimitRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderLimitRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ËÆ¢ÂçïÊÄªÊï∞"

[node name="OrderLimitSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderLimitRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 4.0

[node name="OrderItemReqRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderItemReqRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÂçïÊçÆÁâ©ÂìÅÊï∞ (1-6)"

[node name="OrderItemReqMinSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderItemReqRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 6.0
value = 1.0

[node name="Label2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderItemReqRow"]
layout_mode = 2
text = "-"

[node name="OrderItemReqMaxSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderItemReqRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 6.0
value = 2.0

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="OrderRarityLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "ËÆ¢ÂçïÂìÅË¥®Ê¶ÇÁéá"
theme_override_font_sizes/font_size = 14

[node name="OrderRarityCommonRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityCommonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÊôÆÈÄö"

[node name="OrderRarityCommonSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityCommonRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 100.0

[node name="OrderRarityUncommonRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityUncommonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "‰ºòÁßÄ"

[node name="OrderRarityUncommonSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityUncommonRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="OrderRarityRareRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityRareRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Á®ÄÊúâ"

[node name="OrderRarityRareSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityRareRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="OrderRarityEpicRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityEpicRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Âè≤ËØó"

[node name="OrderRarityEpicSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityEpicRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="OrderRarityLegendaryRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityLegendaryRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "‰º†ËØ¥"

[node name="OrderRarityLegendarySpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/OrderRarityLegendaryRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="PoolRarityLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "ÊäΩÂèñÂìÅË¥®Ê¶ÇÁéá"
theme_override_font_sizes/font_size = 14

[node name="PoolRarityCommonRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityCommonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÊôÆÈÄö"

[node name="PoolRarityCommonSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityCommonRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 100.0

[node name="PoolRarityUncommonRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityUncommonRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "‰ºòÁßÄ"

[node name="PoolRarityUncommonSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityUncommonRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="PoolRarityRareRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityRareRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Á®ÄÊúâ"

[node name="PoolRarityRareSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityRareRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="PoolRarityEpicRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityEpicRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Âè≤ËØó"

[node name="PoolRarityEpicSpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityEpicRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="PoolRarityLegendaryRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityLegendaryRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "‰º†ËØ¥"

[node name="PoolRarityLegendarySpinBox" type="SpinBox" parent="MarginContainer/ScrollContainer/VBoxContainer/PoolRarityLegendaryRow"]
unique_name_in_owner = true
layout_mode = 2
min_value = 0.0
max_value = 1000.0
step = 0.1
value = 0.0

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "ÊâãÂä®Âà∑Êñ∞"
theme_override_font_sizes/font_size = 14

[node name="RefreshButtonsRow" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ApplyButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/RefreshButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Á´ãÂç≥Â∫îÁî®Êõ¥Êîπ"

[node name="HSeparator7" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="QuickActions" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="UnlockAllButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/QuickActions"]
layout_mode = 2
text = "ÂÖ®ÈÉ®Ëß£ÈîÅ"

[node name="LockAllButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/QuickActions"]
layout_mode = 2
text = "ÂÖ®ÈÉ®ÈîÅÂÆö"
